[2019-12-12]
- Initialize tests: molecule is AWESOME!