@@ -1,9 +1,10 @@
 # Ansible Role for HashiCorp Nomad
-![](https://github.com/Kreditorforeningens-Driftssentral-DA/ansible-role-nomad/workflows/molecule/badge.svg)
+![Build Status](https://github.com/Kreditorforeningens-Driftssentral-DA/ansible-role-nomad/workflows/molecule/badge.svg)
+[![Percentage of issues still open](http://isitmaintained.com/badge/open/Kreditorforeningens-Driftssentral-DA/ansible-role-nomad.svg)](http://isitmaintained.com/project/Kreditorforeningens-Driftssentral-DA/ansible-role-nomad "Percentage of issues still open")
 
 ## References
 * [https://www.nomadproject.io](https://www.nomadproject.io)
-* [https://github.com/hashicorp/nomad]https://github.com/hashicorp/nomad)
+* [https://github.com/hashicorp/nomad](https://github.com/hashicorp/nomad)
 
 ## Using this role
 
