@@ -1,0 +1,13 @@
+################################################################################
+# {{ ansible_managed }}
+################################################################################
+
+ANSIBLE_NOMAD_VERSION={{ version }}
+{% if cni_enabled %}
+ANSIBLE_CNI_VERSION={{ cni_version }}
+{% endif %}
+PATH="$PATH:{{ path_binaries }}{% if cni_enabled %}{{ cni_path }}{% endif %}"
+
+################################################################################
+# {{ ansible_managed }}
+################################################################################
