@@ -1,0 +1,15 @@
+################################################################################
+# {{ ansible_managed }}
+################################################################################
+
+ANSIBLE_NOMAD_VERSION={{ version }}
+{% if cni_enabled %}
+ANSIBLE_CNI_VERSION={{ cni_version }}
+{% endif %}
+if [ -d "{{ path_binaries }}" ] ; then
+  PATH="$PATH:{{ path_binaries }}{% if cni_enabled %}:{{ cni_path }}{% endif %}"
+fi
+
+################################################################################
+# {{ ansible_managed }}
+################################################################################
