@@ -1,3 +1,6 @@
+################################################################################
+# {{ ansible_managed }}
+################################################################################
 [Unit]
 Description="HashiCorp Nomad"
 Documentation=https://nomadproject.io/docs/
@@ -18,3 +21,6 @@ LimitNOFILE=65536
 
 [Install]
 WantedBy=multi-user.target
+################################################################################
+# {{ ansible_managed }}
+################################################################################
